--- a/package.json
+++ b/package.json
@@ -18,5 +18,19 @@
     "format:write": "prettier --write .",
     "lint:check": "eslint .",
     "lint:fix": "eslint --fix ."
-  }
+  },
+  "name": "calculadora",
+  "version": "1.0.0",
+  "main": "main.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/agush44/calculadora-js.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/agush44/calculadora-js/issues"
+  },
+  "homepage": "https://github.com/agush44/calculadora-js#readme",
+  "description": ""
 }
